--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,4 +1,9 @@
 <h1>StaticPages#privacy_policy</h1>
 <p>Welcome to Privacy Policy Page</p>
 
-<%= link_to 'Home', root_path %>
+
+<%# home page button and fontasesome icons %>
+<%= link_to root_path do %>  
+<i class="far fa-gem fa-spin fa-3x"></i>
+Home
+<% end %>
