use scaffold to create Product MVC

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,4 +1,4 @@
-<h1>StaticPages#landing_page</h1>
+<h1>Let's start a new journey....</h1>
 <p>Welcome to home page</p>
 
 
@@ -6,4 +6,10 @@
 <%= link_to privacy_policy_path do %>  
 <i class="fas fa-cog fa-spin fa-3x"></i>
 Privacy Policy
+<% end %>
+
+<%# products page button and fontasesome icons %>
+<%= link_to products_path, class:'btn btn-success' do %>  
+<i class="far fa-gem "></i>
+Products
 <% end %>
