--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,16 @@
   </head>
 
   <body>
+   <%# navbar partial %>
     <%= render 'shared/nav'%>
+    <%# header partial for users varify %>
+    <%= render 'shared/header'%>
+    <%# start: devise default set %>
+    <p class='notice'> <%= notice %> </p>
+    <p class='alert'> <%= alert %> </p>
+    <%# end: devise default set %>
     <%= yield %>
+    <%# footer partial %>
     <%= render 'shared/footer'%>
   </body>
 </html>
