--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -5,7 +5,11 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :description %>
+    <%#  f.input :description %>
+    <%# start: for action text form view %>
+    <%= f.label :description %>  
+    <%= f.rich_text_area :description %>
+    <%# end: for action text form view %>
   </div>
 
   <div class="form-actions">
