--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,35 +1,90 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Travel-Fun</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<%# bootstrap navbar format + check if user login then display account settings and sign out link  %>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Travel Fun</a>
+  <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+  <%# if user logged in  %>
+  <%# if current_user.present? is same thing as below %>
+  <%# if current_user vs if current_user.present? is implicit vs explicit check for object truthiness.In Ruby, everything except for false and nil is truthy. So if current_user means if current_user is anything except for nil or false then proceed. %>
+    <% if current_user %>
+      <ul class="navbar-nav mr-auto">
+      <%# the below link is active if the current page is and we decide what the current page should be %>
+        <%# eg, if current page is root path then the link is go to home page.  %>
+        <li class="<%= 'active font-weight-bold' if current_page?(root_path) %> nav-item">
+          <%= link_to root_path, class: 'nav-link' do %>
+            <div class="fa fa-home"></div>
+            Home
+          <% end %>
+        </li>
+        <li class="<%= 'active font-weight-bold' if current_page?(products_path) %> nav-item">
+          <%= link_to products_path, class: 'nav-link' do %>
+            <div class="fa-solid fa-suitcase"></div>
+            Products
+          <% end %>
+        </li>
+      </ul>
+      <div class="form-inline my-2 my-lg-0">
+        <%= form_tag(root_path, method: :get) do %>
+          <div class="input-group">
+            <%= text_field_tag :name, params[:name], autocomplete: 'off', placeholder: "Search", class: 'form-control-sm' %>
+            <span class="input-group-append">
+              <button class="btn btn-primary btn-sm" type="submit">
+                <span aria-hidden="true" class="fa fa-search"></span>
+              </button>
+            </span>
+          </div>
+        <% end %>
+      </div>
+      <ul class="navbar-nav mr-right">
+        <li class="<%= 'active font-weight-bold' if current_page?(root_path) %> nav-item">
+          <%= link_to root_path, class: 'nav-link' do %>
+            <div class="fa fa-home"></div>
+            Another link
+          <% end %>
+        </li>
+        <li class="nav-item dropdown">
+          <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+            <b>
+              <%= current_user.email %>
+            </b>
+          </a>
+          <div aria-labelledby="navbarDropdown" class="dropdown-menu dropdown-menu-right">
+            <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+              <div class="fa fa-cog"></div>
+              <b>Account settings</b>
+            <% end %>
+            <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
+              <div class="fa fa-sign-out-alt"></div>
+              <b>Sign out</b>
+            <% end %>
+          </div>
+        </li>
+      </ul>
+     <%# if user didn't log in  %>
+    <% else %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Log In', new_user_session_path, class: 'nav-link' %>
+        </li>
+      </ul>
+    <% end %>
   </div>
 </nav>
+
+
+<%# here was my code to check if user log in and I use them + bootstrap as above %>
+<%# check if user login then display account settings and sign out link %>
+<%# <if current_user %>
+    <%# current_user.email %>
+    <%# link_to 'Account Settings',edit_user_registration_path %>
+    <%# link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+<%# check if user don't login then need sign up or log in  %>
+<%# else %>
+    <%# link_to 'Sign Up', new_user_registration_path %>
+    <%# link_to 'Log In', new_user_session_path %>
+<%# end %>
