change home page and edit,new pages format by boostrap

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,8 +11,9 @@
     <%= f.rich_text_area :description %>
     <%# end: for action text form view %>
   </div>
-
-  <div class="form-actions">
+   
+   <%# add bootsrap for edit update button %>
+  <div class="form-actions btn btn-warning mt-3 text-light p-0">
     <%= f.button :submit %>
   </div>
 <% end %>
