--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <%# bootstrap navbar format + check if user login then display account settings and sign out link  %>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Travel Fun</a>
+  <a class="navbar-brand" href="/">Travel Fun</a>
   <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,13 +18,22 @@
             Home
           <% end %>
         </li>
+        <%# link to product list page %>
         <li class="<%= 'active font-weight-bold' if current_page?(products_path) %> nav-item">
           <%= link_to products_path, class: 'nav-link' do %>
-            <div class="fa-solid fa-suitcase"></div>
-            Products
+            <div class="fa-solid fa-suitcase"></div> 
+            Trips
+          <% end %>
+        </li>
+        <%# link to add new product page %>
+        <li class="<%= 'active font-weight-bold' if current_page?(new_product_path) %> nav-item">
+          <%= link_to new_product_path, class: 'nav-link' do %>
+            <div class="fa-solid fa-location-arrow"></div>
+            New Trip
           <% end %>
         </li>
       </ul>
+
       <div class="form-inline my-2 my-lg-0">
       <%# below is search function front end, please find the controller action at products_controller.rb file %>
         <%= form_tag(products_path, method: :get) do %>
