--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,38 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Products</h1>
+<h1>Listing Products: <%= @products.count%></h1>
 
-<table class='table'>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>User</th>  
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="card-columns">
+   <%# use ruby each method to list each product in card format %>
+  <% @products.each do |product| %>
+    <%= render 'products/product', product: product %>
+  <% end %>
+</div>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.user %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Product', new_product_path %>
-
-<%# home page button and fontasesome icons %>
-<%= link_to root_path do %>  
-<i class="far fa-gem fa-spin fa-3x"></i>
-Home
-<% end %>
 
