--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,11 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%# show page will display each product details %>
+<div class="container mt-3">
+<%= link_to 'Travel Plans', products_path %>
+\
+<%# icon + boostrap color %>
+<i class="fa-solid fa-map-location-dot text-info"></i>
+<%= link_to @product.title, product_path(@product) %> 
+<p></p>
+<%# render partial page product for exactly product %>
+<%= render 'products/product', product: @product %>
+</div>
