--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -2,7 +2,7 @@
 <%# bootstrap jumbotron format %>
 <div class="jumbotron mt-3">
   <h1 class="display-4">Welcome Traveller</h1>
-  <p class="lead">Do you prepare to start a new journey?</p>
+  <p class="lead ">Do you prepare to <span class="mov font-weight-bold text-primary"> </span> </p>
   <hr class="my-4">
   <div class="form-inline my-2 my-lg-0">
       <%# below is search function front end, please find the controller action at products_controller.rb file %>
