update typed.js content to home page

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,8 +1,9 @@
 
 <%# bootstrap jumbotron format %>
 <div class="jumbotron mt-3">
-  <h1 class="display-4">Welcome Traveller</h1>
-  <p class="lead ">Do you prepare to <span class="mov font-weight-bold text-primary"> </span> </p>
+  <h1 class="display-4 text-success"> Welcome Traveller </h1>
+  <%# spay tag for typed.js %>
+  <p class="lead font-weight-bold font-italic text-primary">Do you prepare to <span class="mov"> </span> </p>
   <hr class="my-4">
   <div class="form-inline my-2 my-lg-0">
       <%# below is search function front end, please find the controller action at products_controller.rb file %>
