--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -6,11 +6,11 @@
   </div>
 
   <div class="card-body"> 
-    <%= render 'form', product: @product %>
+    <%= render 'form', trip: @trip %>
   </div>
 
   <div class="card-footer">
-    <%= link_to 'Back', products_path %>
+    <%= link_to 'Back', trips_path %>
   </div>
 
 </div>
