setup devise trackable for users, create users controller and index views, and user partial

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,6 +8,7 @@
   <%# if user logged in  %>
   <%# if current_user.present? is same thing as below %>
   <%# if current_user vs if current_user.present? is implicit vs explicit check for object truthiness.In Ruby, everything except for false and nil is truthy. So if current_user means if current_user is anything except for nil or false then proceed. %>
+  <%# when users logged in, the below will appear at navbar left section %>
     <% if current_user %>
       <ul class="navbar-nav mr-auto">
       <%# the below link is active if the current page is and we decide what the current page should be %>
@@ -32,21 +33,24 @@
             New Trip
           <% end %>
         </li>
-      </ul>
-
-      <div class="form-inline my-2 my-lg-0">
-      <%# below is search function front end, please find the controller action at trips_controller.rb file %>
-        <%= form_tag(trips_path, method: :get) do %>
-          <div class="input-group">
-            <%= text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Find your favorite trip", class: 'form-control-sm' %>
-            <span class="input-group-append">
-              <button class="btn btn-primary btn-sm" type="submit">
+      <%# Search Bar Start %>
+      <%# below is search function front end, please find the controller action at trips_controller.rb file %>  
+        <div class="form-inline my-2 my-lg-0">
+          <%= form_tag(trips_path, method: :get) do %>
+            <div class="input-group">
+              <%= text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Find your favorite trip", class: 'form-control-sm' %>
+                <span class="input-group-append">
+                <button class="btn btn-primary btn-sm" type="submit">
                 <span aria-hidden="true" class="fa fa-search"></span>
-              </button>
-            </span>
-          </div>
-        <% end %>
-      </div>
+                </button>
+              </span>
+            </div>
+          <% end %>
+        </div>
+      <%# Search Bar End %>
+      </ul>
+     
+     <%# navbar right section : another_link, User_community and Account %>
       <ul class="navbar-nav mr-right">
         <li class="<%= 'active font-weight-bold' if current_page?(root_path) %> nav-item">
           <%= link_to root_path, class: 'nav-link' do %>
@@ -54,6 +58,14 @@
             Another link
           <% end %>
         </li>
+
+        <li class="<%= 'active font-weight-bold' if current_page?(users_path) %> nav-item">
+          <%= link_to users_path, class: 'nav-link' do %>
+            <div class="fa-solid fa-users-gear"></div>
+            Users Community
+          <% end %>
+        </li>
+
         <li class="nav-item dropdown">
           <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdown" role="button">
             <b>
