--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -13,7 +13,8 @@
   </div>
    
    <%# add bootsrap for edit update button %>
-  <div class="form-actions btn btn-warning mt-3 text-light p-0">
+   <%# btn btn-warning mt-3 text-light p-0 %>
+  <div class="form-actions ">  
     <%= f.button :submit %>
   </div>
 <% end %>
