--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,3 +5,63 @@
     <%= render 'users/user', user: user %>
   <% end %>
 </div>
+<%# front end view cooperate with gem ransack users controller %>
+<div class="form-inline">
+  <%= search_form_for @q do |f| %>
+    <%= f.search_field :email_cont, placeholder: "email search" %>
+    <%= f.submit "Search", class: "btn btn-sm btn-info" %>
+  <% end %>
+  <div class="ml-2"></div>
+  <%= link_to users_path, class:"btn btn-sm btn-success" do %>
+    <div class="fa-solid fa-arrows-rotate"></div>
+      refresh
+  <% end %>
+</div>
+<%# search table %>
+<table class="table table-bordered mt-3 text-center">
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>
+      <%# Ransack's sort_link helper creates table headers that are sortable links %>
+        <%= sort_link(@q, :email) %>
+      </th>
+      <th>
+      <%= "created_at".humanize %>
+      </th>
+      <th>
+        <%= "sign_in_count".humanize %>
+      </th>
+      <th>
+        <%= "current_sign_in_at".humanize %>
+      </th>
+      <th>
+        <%= "last_sign_in_at".humanize %>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td>
+          <%= user.id %>
+        </td>
+        <td>
+          <%= user.email %>
+        </td>
+        <td>
+          <%= user.created_at %>
+        </td>
+        <td>
+          <%= user.sign_in_count %>
+        </td>
+        <td>
+          <%= user.current_sign_in_at %>
+        </td>
+        <td>
+          <%= user.last_sign_in_at %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
