update landing page search bar and add footer for it as well, waiting update the layout

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -54,15 +54,9 @@
       <%# Search Bar End %>
       </ul>
      
-     <%# navbar right section : another_link, User_community and Account puls activities histiory %>
+     <%# navbar right section :  User_community and Account puls activities histiory %>
       <ul class="navbar-nav mr-right">
-        <li class="<%= 'active font-weight-bold' if current_page?(root_path) %> nav-item">
-          <%= link_to root_path, class: 'nav-link' do %>
-            <div class="fa fa-home"></div>
-            Another link
-          <% end %>
-        </li>
-      
+        
         <li class="<%= 'active font-weight-bold' if current_page?(users_path) %> nav-item">
           <%= link_to users_path, class: 'nav-link' do %>
             <div class="fa-solid fa-users-gear"></div>
