--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,9 @@
 
  @import 'bootstrap/scss/bootstrap';
  @import './actiontext.scss';
+
+ .page-footer {
+     a {
+        text-decoration: none;
+     }
+ }
