--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -5,19 +5,28 @@
   <%# spay tag for typed.js %>
   <p class="lead font-weight-bold font-italic text-primary">Do you prepare to <span class="mov"> </span> </p>
   <hr class="my-4">
-  <div class="form-inline my-2 my-lg-0">
-      <%# below is search function front end, please find the controller action at trips_controller.rb file %>
-        <%= form_tag(trips_path, method: :get) do %>
-          <div class="input-group">
-            <%= text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Find your favorite trip", class: 'form-control-sm' %>
+      <%# Search Bar Start %>
+      <%# after use ransack gem, I set a method on application controller, we can use that globel vaeiable to set nav bar search %>
+      <%# in home page, need to add if current_user statment, otherwise logout will rise an error %>
+      <% if current_user %>
+      <div class="form-inline my-2 my-lg-0">
+          <%= search_form_for @ransack_trips, as: :trips_search, url: trips_path do |f| %>
+           <div class="input-group">
+           <%# :title_or_brief_info_cont which means when client use search bar  %>
+           <%# The db will check trips table for "title"  OR "brief_info" to find if there are anything to match %>
+           <%# kind of like nav bar search includes the side bar search: title and brief info seach %>
+           <%# finally I changed it back to only for title search, I found this is more accurate for users searching %>
+           <%= f.search_field :title_cont, class: 'form-control-sm',  placeholder: 'Find Your Trip', autocomplete: 'off' %>
             <span class="input-group-append">
-              <button class="btn btn-primary btn-sm" type="submit">
+                <button class="btn btn-primary btn-sm" type="submit">
                 <span aria-hidden="true" class="fa fa-search"></span>
-              </button>
-            </span>
-          </div>
+                </button>
+              </span>
+            </div>
+          <% end %>
+        </div>
         <% end %>
-      </div>
+      <%# Search Bar End %>
 </div>
 
 <%# for bootstrap card group format %>
