--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,13 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Trips: <%= @trips.count%></h1>
-
+<%# update trips listing layout below %>
+<h3>
+  <div class="text-center my-3">
+    Listing Trips, now we have:
+    <div class="badge badge-info">
+      <%= @trips.count %> Trips
+    </div>
+  </div>
+</h3>
 <%# search_form by ransack gem  %>
 <div class="row">
   <div class="col-md-2">
     <%# update the below @q to @ransack_trips %>
     <%# search_form_for @q do |f| %>
-    
+
     <%= search_form_for @ransack_trips, as: :trips_search, url: trips_path do |f|%>
       <%= f.label :title %>
       <%= f.search_field :title_cont, placeholder: 'Title', class: 'form-control form-control-sm' %>
