set up methods in users controller then can basic edit,update users roles, also create the view to display it

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -52,10 +52,11 @@
  <%# setup view for user roles, this one cooperate with roligy gem controller and model %> 
   <div class="card-footer ">
     <% user.roles.each do |role| %> 
-      <small class= "badge badge-warning">
+      <small class= "badge badge-success">
       <%= role.name %>
       </small>
     <% end %>
-  
+
+    <%= link_to 'Edit Roles', edit_user_path(user), class: 'btn btn-sm btn-warning' %>
   </div>
 </div>
