create user show page, and add friendly id gem setup for user model and controller, also create another migration

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,7 +3,7 @@
 
   <div class="card-header">
     <div class="fa-solid fa-user-secret"></div>
-    <%= user.email %>
+    <%= link_to user.email, user_path(user) %>
   </div>
   
   <div class="card-footer">
