--- a/app/views/trips/_trip.html.erb
+++ b/app/views/trips/_trip.html.erb
@@ -44,11 +44,12 @@
     </div>
 
     <%# each trip links are card footer as well  %>
+    <% if current_user %>
     <% if policy(trip).edit? %>
     <div class="card-footer">
     <%= link_to 'Edit', edit_trip_path(trip), class: 'btn btn-sm btn-info' %>
     <%= link_to 'Destroy', trip, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
     </div>
     <% end %>
-
+    <% end %>
 </div>
